...
    return Scaffold(
      appBar: AppBar(title: const Text('НАСТРОЙКИ')),
      body: ListView(
        padding: const EdgeInsets.all(16),
        children: [
          const Text(
            'АДРЕС API',
            style: TextStyle(
              fontSize: 11,
              letterSpacing: 1.0,
              color: AppColors.textMuted,
              fontWeight: FontWeight.w700,
            ),
...
